# try-or-py

./: README.md  pyproject.toml
.github/workflows/: python-publish-testpypi.yml  python-publish.yml
src/try_or/: __init__.py
tests/: test_try_or_examples.py  test_try_or_multi.py  test_try_or_properties.py
